# template-project

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/: tests.yml
docs/: 404.html  about.md  index.html  sitemap.xml
docs/about/: index.html
docs/assets/stylesheets/: palette.ecc896b0.min.css
docs/search/: search_index.json
docs/user-guide/ciao/: index.html
docs/user-guide/old_index/: index.html
mkdoc/: index.md
mkdoc/user-guide/: old_index.md
site/: sitemap.xml
site/assets/stylesheets/: main.26e3688c.min.css
site/user-guide/ciao/: index.html
src/: main.py
src/config/: .coveragerc  pylintrc
src/configs/: .coveragerc  mypy.ini
src/logs/: logger.py
src/models/: test_import.py
