[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template-project"
version = "0.1.0"
description = ""
authors = [
    {email = "stefano.ravagnan@outlook.com"},
]
maintainers = [
    {name = "Stefano Ravangan", email = "stefano.ravagnan@outlook.com"}
]
readme = "README.md"

dependencies = [
    "nox==2022.8.7",
    "pre_commit==3.1.1"
]

[project.optional-dependencies]
dev = [
    "mypy==1.3.0",
    "black==23.3.0",
    "isort==5.12.0",
    "pytest==7.1.2",
    "pytest-cov==4.0.0",
    "pre-commit==3.1.1",
    "pylint==2.15.0",
    "coverage==6.5.0",
    "typeguard==2.13.3"
]

[tool.black]
isort = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 80


