[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "template-project"
version = "0.1.0"
description = ""
authors = ["stefano.ravagnan@outlook.com"]
maintainers = ["Stefano Ravangan <stefano.ravagnan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # You might want to specify a python version.
nox = "2022.8.7"
pre_commit = "3.1.1"
mkdocs = "*"
mkdocs-i18n = "*"
mkdocs-material = "*"
mdx-include = "*"

[tool.poetry.dev-dependencies]
mypy = "1.3.0"
black = "23.3.0"
isort = "5.12.0"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pre-commit = "3.1.1"
pylint = "2.15.0"
coverage = "6.5.0"
typeguard = "2.13.3"

[tool.black]
isort = true

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 80
